kubernetes/manifests/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sani-app
  namespace: sani-lite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sani-app
  template:
    metadata:
      labels:
        app: sani-app
    spec:
      serviceAccountName: app-sa
      containers:
        - name: sani-app
          image: 075120018043.dkr.ecr.us-east-1.amazonaws.com/sani-lite:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: sani-lite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost", "-u", "sani", "-psanipassword"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
