kubernetes/manifests/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sani-app
  namespace: sani-lite
  labels:
    app: sani-app
spec:
  type: ClusterIP
  selector:
    app: sani-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sani-lite
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
